* fix overflow scroll

--- a/src/web/scss/app.scss
+++ b/src/web/scss/app.scss
@@ -9,7 +9,7 @@ $sidebar-width: 18rem;
   height: 100vh;
   width: 100vw;
 
-  background-color: color("grey", "lighten-4");
+  background-color: #EEEEEE;
 
   .google-sign-up.btn {
     background-color: $google-primary-color;
@@ -28,9 +28,11 @@ $sidebar-width: 18rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
+
 }
 
 #layout-sidebar{
+  background-color: #F2F2F2;
   width: $sidebar-width;
 }
 
@@ -47,15 +49,20 @@ $sidebar-width: 18rem;
 }
 
 #layout-sidebar-header, #layout-main-header {
+  
   height: $header-height;
   padding: 0 1rem;
   display: flex;
   align-items: center;
+  //box-shadow: 0px 1px 10px rgba(0,0,0,1);
+
   i {
     color: white;
   }
 }
-
+#layout-main-header {
+  z-index: 200;
+}
 
 #layout-sidebar-header {
   h5 {
